--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello, World!
+<!DOCTYPE html>
+
+<html lang="en">
+<head>
+    <title>Beginning JavaScript, 5th Edition Code Samples</title>
+</head>
+    <body>
+        <h1>Code Samples for Beginning JavaScript, 5th Edition</h1>
+        <p>Author: Jeremy McPeak</p>
+        
+        <h3>Chapter 1</h3>
+        <ul>
+            <li><a href="ch01/ch1_example1.html">Example 1</a></li>
+            <li><a href="ch01/ch1_example1.html">Example 2</a></li>
+            <li><a href="ch01/ch1_example1.html">Example 3</a></li>
+        </ul>
+        
+        <h3>Chapter 2</h3>
+        <ul>
+            <li><a href="ch02/ch2_example1.html">Example 1</a></li>
+            <li><a href="ch02/ch2_example2.html">Example 2</a></li>
+        </ul>
+    </body>
+</html>
