Added more examples for chapter 2; updated index

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <ul>
             <li><a href="ch02/ch2_example1.html">Example 1</a></li>
             <li><a href="ch02/ch2_example2.html">Example 2</a></li>
+            <li><a href="ch02/ch2_example3.html">Example 3</a></li>
+            <li><a href="ch02/ch2_example4.html">Example 4</a></li>
+
         </ul>
     </body>
 </html>
