Added ch2 examples 8 and 9; updated toc

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <li><a href="ch02/ch2_example5.html">Example 5</a></li>
             <li><a href="ch02/ch2_example6.html">Example 6</a></li>
             <li><a href="ch02/ch2_example7.html">Example 7</a></li>
+            <li><a href="ch02/ch2_example8.html">Example 8</a></li>
+            <li><a href="ch02/ch2_example9.html">Example 9</a></li>
         </ul>
     </body>
 </html>
