--- a/index.html
+++ b/index.html
@@ -27,5 +27,13 @@
             <li><a href="ch02/ch2_example8.html">Example 8</a></li>
             <li><a href="ch02/ch2_example9.html">Example 9</a></li>
         </ul>
+        
+        <h3>Chapter 3</h3>
+        <ul>
+            <li><a href="ch03/ch3_example1.html">Example 1</a></li>
+            <li><a href="ch03/ch3_example2.html">Example 2</a></li>
+            <li><a href="ch03/ch3_example3.html">Example 3</a></li>
+            <li><a href="ch03/ch3_example4.html">Example 4</a></li>
+        </ul>
     </body>
 </html>
