Added Chapter 4 Example 1 and updated TOC

--- a/index.html
+++ b/index.html
@@ -35,5 +35,9 @@
             <li><a href="ch03/ch3_example3.html">Example 3</a></li>
             <li><a href="ch03/ch3_example4.html">Example 4</a></li>
         </ul>
+        <h4>Chapter 4</h4>
+        <ul>
+            <li><a href="ch04/ch4_example1.html">Example 1</a></li>
+        </ul>
     </body>
 </html>
