Added Ch04, Ex02 and updated TOC

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <h4>Chapter 4</h4>
         <ul>
             <li><a href="ch04/ch4_example1.html">Example 1</a></li>
+            <li><a href="ch04/ch4_example2.html">Example 2</a></li>
         </ul>
     </body>
 </html>
