Fixed figure 3 code, chapter 5

--- a/ch05/figures/ch5_figure3.html
+++ b/ch05/figures/ch5_figure3.html
@@ -13,7 +13,7 @@
             return result;
         }
 
-        var doubledNumbers = numbers.map(doubleAndAlert);
+        var doubledNumbers = numbers.map(doubleAndReturn);
         alert("The doubled numbers are: " + doubledNumbers);
     </script>
 </body>
