updated ch13 examples

--- a/examples/ch13_example2a.html
+++ b/examples/ch13_example2a.html
@@ -23,7 +23,7 @@
         }
 
         var now = new Date();
-        setCookie("LastVisit", now.toUTCString(), "", "");
+        setCookie("LastVisit", now.toUTCString());
     </script>
 
 </body>
