changed scrapsheet for screenshot

--- a/scrapsheet.html
+++ b/scrapsheet.html
@@ -5,9 +5,7 @@
 </head>
 <body>
     <script>
-        var num = abc + 2;
-
-        abc = 12;
+        alert(abc);
     </script>
 </body>
 </html>
