changed srapsheet for another screenshot

--- a/scrapsheet.html
+++ b/scrapsheet.html
@@ -5,7 +5,10 @@
 </head>
 <body>
     <script>
-        alert(abc);
+        function foo(parametrOne) {
+            alert(parameterOne);
+        }
+
     </script>
 </body>
 </html>
