--- a/examples/ch17_example1a.html
+++ b/examples/ch17_example1a.html
@@ -7,7 +7,7 @@
     <script>
         Modernizr.load({
             test: Modernizr.localStorage,
-            nope: "localstorage.js"
+            nope: "localstorage.js?swfURL=localStorage.swf"
         });
     </script>
 </head>
