added on to event handlers

--- a/examples/ch17_example1.html
+++ b/examples/ch17_example1.html
@@ -39,8 +39,8 @@
         var dropZone = document.getElementById("dropZone");
         var dropStatus = document.getElementById("dropStatus");
 
-        dropZone.dragover = dragDropHandler;
-        dropZone.drop = dragDropHandler;
+        dropZone.ondragover = dragDropHandler;
+        dropZone.ondrop = dragDropHandler;
     </script>
 </body>
 </html>
