updated ch17 ex1

--- a/examples/ch17_example1.html
+++ b/examples/ch17_example1.html
@@ -4,15 +4,6 @@
 <head>
     <title>Chapter 17: Example 1</title>
     <style>
-        .box {
-            width: 100px;
-            height: 100px;
-        }
-
-        .red {
-            background-color: red;
-        }
-
         .drop-zone {
             width: 300px;
             padding: 20px;
@@ -21,7 +12,7 @@
     </style>
 </head>
 <body>
-    <div id="test" draggable="true" class="box red"></div>
+    <div id="test" draggable="true">Here is some text to select and drag.</div>
     <div id="dropZone" class="drop-zone">Drop Zone!</div>
     <div id="dropStatus"></div>
 
