fixed ch10 ex21; modified ch17 ex1

--- a/examples/ch10_example21.html
+++ b/examples/ch10_example21.html
@@ -39,10 +39,7 @@
 
     <script>
         function handleDragStart(e) {
-            e.dataTransfer.setData("tex" +
-                "" +
-                "" +
-                "t", this.id);
+            e.dataTransfer.setData("text", this.id);
         }
 
         function handleDragEnterLeave(e) {
