--- a/examples/ch17_example1.html
+++ b/examples/ch17_example1.html
@@ -37,15 +37,17 @@
             return typeof span.draggable != "undefined";
         });
 
-        Modernizr.load({
+        Modernizr.load([{
             test: Modernizr.draggable,
             nope: "draggable-polyfill.js"
-        });
-
-        Modernizr.load({
+        },
+        {
             test: document.addEventListener,
-            nope: "event-polyfill.js"
-        });
+            nope: "event-polyfill.js",
+            complete: init
+        }]);
+
+        Modernizr.load();
     </script>
 </head>
 <body>
@@ -56,6 +58,7 @@
     <div data-drop-target="true"></div>
 
     <script>
+        
         function handleDragStart(e) {
             e.dataTransfer.setData("text", this.id);
         }
@@ -89,18 +92,20 @@
             this.className = "";
         }
 
-        var draggable = document.querySelectorAll("[draggable]");
-        var targets = document.querySelectorAll("[data-drop-target]");
+        function init() {
+            var draggable = document.querySelectorAll("[draggable]");
+            var targets = document.querySelectorAll("[data-drop-target]");
 
-        for (var i = 0; i < draggable.length; i++) {
-            draggable[i].addEventListener("dragstart", handleDragStart);
-        }
+            for (var i = 0; i < draggable.length; i++) {
+                draggable[i].addEventListener("dragstart", handleDragStart);
+            }
 
-        for (i = 0; i < targets.length; i++) {
-            targets[i].addEventListener("dragover", handleOverDrop);
-            targets[i].addEventListener("drop", handleOverDrop);
-            targets[i].addEventListener("dragenter", handleDragEnterLeave);
-            targets[i].addEventListener("dragleave", handleDragEnterLeave);
+            for (i = 0; i < targets.length; i++) {
+                targets[i].addEventListener("dragover", handleOverDrop);
+                targets[i].addEventListener("drop", handleOverDrop);
+                targets[i].addEventListener("dragenter", handleDragEnterLeave);
+                targets[i].addEventListener("dragleave", handleDragEnterLeave);
+            }
         }
     </script>
 
