added ch17 examples; updated ch16

--- a/examples/ch17_example2.html
+++ b/examples/ch17_example2.html
@@ -8,7 +8,7 @@
     <button id="theButton">Click Me!</button>
     <script src="prototype.1.7.2.js"></script>
     <script>
-        var buttonObj = document.getElementById("theButton");
+        var buttonObj = $("theButton");
 
         function buttonClick() {
             $(document.body).writeAttribute("bgColor", "yellow")
