--- a/examples/ch17_example7.html
+++ b/examples/ch17_example7.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-    <title>Chapter 16: Example 2</title>
+    <title>Chapter 17: Example 7</title>
     <style>
         .fieldname {
             text-align: right;
@@ -64,52 +64,60 @@
             </tr>
         </table>
     </form>
-    <script src="jquery-2.1.1.min.js"></script>
+    <script src="mootools-core-1.5.1-compressed.js"></script>
     <script>
         function checkUsername(e) {
             e.preventDefault();
 
-            var userValue = $("#username").val();
+            var userValue = $("username").value;
 
             if (!userValue) {
                 alert("Please enter a user name to check!");
                 return;
             }
 
-            var parms = {
-                username: userValue
+            var options = {
+                url: "ch14_formvalidator.php",
+                data: {
+                    username: userValue
+                },
+                onSuccess: handleResponse
             };
 
-            $.getJSON("ch14_formvalidator.php", parms).done(handleResponse);
+            new Request.JSON(options).get();
         }
 
         function checkEmail(e) {
             e.preventDefault();
 
-            var emailValue = $("#email").val();
+            var emailValue = $("email").value;
 
             if (!emailValue) {
                 alert("Please enter an email address to check!");
                 return;
             }
 
-            var parms = {
-                email: emailValue
+            var options = {
+                url: "ch14_formvalidator.php",
+                data: {
+                    email: emailValue
+                },
+                onSuccess: handleResponse
             };
 
-            $.getJSON("ch14_formvalidator.php", parms).done(handleResponse);
+            new Request.JSON(options).get();
         }
 
-        function handleResponse(response) {
-            if (response.available) {
-                alert(response.searchTerm + " is available!");
+        function handleResponse(data, json) {
+            if (data.available) {
+                alert(data.searchTerm + " is available!");
             } else {
-                alert("We're sorry, but " + response.searchTerm + " is not available.");
+                alert("We're sorry, but " + data.searchTerm + " is not available.");
             }
         }
 
-        $("#usernameAvailability").on("click", checkUsername);
-        $("#emailAvailability").on("click", checkEmail);
+        $("usernameAvailability").addEvent("click", checkUsername);
+        $("emailAvailability").addEvent("click", checkEmail);
     </script>
 </body>
 
