updated ch15 examples

--- a/examples/ch15_example1.html
+++ b/examples/ch15_example1.html
@@ -14,7 +14,7 @@
         </video>
     
         <script>
-            function handlePlayback(e) {
+            function playbackClick(e) {
                 var target = e.target;
                 var video = document.getElementById("bbbVideo");
 
@@ -28,7 +28,7 @@
             }
 
             document.getElementById("playbackController")
-                    .addEventListener("click", handlePlayback);
+                    .addEventListener("click", playbackClick);
         </script>
     </body>
 </html>
