--- a/examples/ch15_example2.html
+++ b/examples/ch15_example2.html
@@ -15,7 +15,7 @@
     </video>
 
     <script>
-        function handlePlayback(e) {
+        function playbackClick(e) {
             var target = e.target;
             var video = document.getElementById("bbbVideo");
 
@@ -28,7 +28,7 @@
             }
         }
 
-        function handleMute(e) {
+        function muteClick(e) {
             var target = e.target;
             var video = document.getElementById("bbbVideo");
 
@@ -42,10 +42,10 @@
         }
 
         document.getElementById("playbackController")
-                .addEventListener("click", handlePlayback);
+                .addEventListener("click", playbackClick);
 
         document.getElementById("muteController")
-                .addEventListener("click", handleMute);
+                .addEventListener("click", muteClick);
     </script>
 </body>
 </html>
