--- a/answers/ch15/ch15_question2.html
+++ b/answers/ch15/ch15_question2.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-    <title>Chapter 15: Example 3</title>
+    <title>Chapter 15: Question 2</title>
 </head>
 <body>
     <div>
