--- a/answers/ch17/ch17_question1.html
+++ b/answers/ch17/ch17_question1.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-    <title>Chapter 14: Question 2</title>
+    <title>Chapter 17: Question 1</title>
     <style>
         .fieldname {
             text-align: right;
@@ -60,7 +60,7 @@
             </tr>
         </table>
     </form>
-    <script src="ch14_question1.js"></script>
+    <script src="prototype.1.7.2.js"></script>
     <script>
         function btnSubmitClick(e) {
             e.preventDefault();
@@ -69,35 +69,47 @@
         }
 
         function checkUsername() {
-            var userValue = document.getElementById("username").value;
+            var userValue = $("username").value;
 
             if (!userValue) {
                 alert("Please enter a user name to check!");
                 return;
             }
 
-            var url = "ch14_formvalidator.php?username=" + userValue;
+            var options = {
+                method: "get",
+                onSuccess: handleUsernameResponse,
+                onFailure: handleError,
+                parameters: {
+                    username: userValue
+                }
+            };
 
-            var request = new HttpRequest(url, handleUsernameResponse);
-            request.send();
+            new Ajax.Request("ch14_formvalidator.php", options);
         }
 
         function checkEmail() {
-            var emailValue = document.getElementById("email").value;
+            var emailValue = $("email").value;
 
             if (!emailValue) {
                 alert("Please enter an email address to check!");
                 return;
             }
 
-            var url = "ch14_formvalidator.php?email=" + emailValue;
+            var options = {
+                method: "get",
+                onSuccess: handleEmailResponse,
+                onFailure: handleError,
+                parameters: {
+                    email: emailValue
+                }
+            };
 
-            var request = new HttpRequest(url, handleEmailResponse);
-            request.send();
+            new Ajax.Request("ch14_formvalidator.php", options);
         }
 
-        function handleUsernameResponse(responseText) {
-            var response = JSON.parse(responseText);
+        function handleUsernameResponse(transport) {
+            var response = transport.responseJSON;
 
             if (!response.available) {
                 alert("The username " + response.searchTerm +
@@ -108,8 +120,8 @@
             checkEmail();
         }
 
-        function handleEmailResponse(responseText) {
-            var response = JSON.parse(responseText);
+        function handleEmailResponse(transport) {
+            var response = transport.responseJSON;
 
             if (!response.available) {
                 alert("The email address " + response.searchTerm +
@@ -120,8 +132,11 @@
             document.theForm.submit();
         }
 
-        document.getElementById("btnSubmit")
-                .addEventListener("click", btnSubmitClick);
+        function handleError() {
+            alert("A network error occurred. Please try again in a few moments.");
+        }
+
+        $("btnSubmit").observe("click", btnSubmitClick);
     </script>
 </body>
 
